<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginrelative"
    tools:context=".activities.LoginActivity">
    <ImageView
        android:id="@+id/loginimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:src="@drawable/iniestalogo"
        android:padding="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginimage"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/enter_your_email"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emaillayout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/enter_your_password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:text="Login"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_below="@+id/passwordlayout" />
    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/Login"
        android:textStyle="bold"
        android:text="@string/forgot_password"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/Login"
        android:layout_toEndOf="@+id/forgotpassword"
        android:textStyle="bold"
        android:text="(or)"/>
    <TextView
        android:id="@+id/loginasadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/Login"
        android:layout_toEndOf="@+id/or"
        android:textStyle="bold"
        android:text="@string/login_as_admin"/>

    <ProgressBar
        android:id="@+id/loginbar"
        android:layout_width="wrap_content"
        android:layout_below="@+id/forgotpassword"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/don_t_have_an_account_signup"/>

</RelativeLayout>